--- a/templates/android-dot-com/styles.css
+++ b/templates/android-dot-com/styles.css
@@ -15,7 +15,7 @@
  */
 
 @font-face {
-  font-family: "And Black";
+  font-family: "Impact";
   src: url("myfont-webfont.eot?#iefix") format('embedded-opentype'),
        url("fonts/and_black.woff") format('woff'),
        url("fonts/and_black.ttf") format('truetype');
@@ -31,12 +31,12 @@ a img{
 }
 
 ::-moz-selection {
-  background-color: #6ab344;
+  background-color: #78909c;
   color: #fff;
 }
 
 ::selection {
-  background-color: #6ab344;
+  background-color: #FAFAFA;
   color: #fff;
 }
 
@@ -59,8 +59,8 @@ a img{
   right: 20%;
   bottom: -26px;
   z-index: 3;
-  background: #64ffda !important;
-  color: black !important;
+  background: #78909c !important;
+  color: blue !important;
 }
 
 .android-mobile-title {
@@ -80,12 +80,12 @@ a img{
 }
 
   .android-header .material-icons {
-    color: #767777 !important;
+    color: #757575 !important;
   }
 
   .android-header .mdl-layout__drawer-button {
     background: transparent;
-    color: #767777;
+    color: #FAFAFA;
   }
 
   .android-header .mdl-navigation__link {
